tests/suite/snapshots/suite__check__tests__check__bad-scope1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
6:9 error:Unbound variable y
