tests/suite/snapshots/suite__check__tests__check__bad-undeclared-var1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-undeclared-var1.xi:2:5]
   │
 2 │     x = 1
   ·     ┬  
   ·     ╰── Unbound variable x
───╯

