tests/suite/snapshots/suite__check__tests__check__bad-underscore-tuple.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
4:3 error:Initialization mismatch
