tests/suite/snapshots/suite__check__tests__check__bad-underscore.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-underscore.xi:4:3]
   │
 4 │   _ = foo()
   ·   ────┬────  
   ·       ╰────── Cannot initialize with a procedure
───╯

