tests/suite/snapshots/suite__check__tests__check__bad-unreachable1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
8:5 error:Unreachable statement
