tests/suite/snapshots/suite__check__tests__check__bad-var-shadowing1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 20
expression: Snapshot(context)
---
2:5 error:Name already bound in environment
