tests/suite/snapshots/suite__check__tests__check__bad-var-shadowing2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-var-shadowing2.xi:6:21]
   │
 6 │                     foo: int
   ·                     ────┬───  
   ·                         ╰───── Name already bound in environment
───╯

