tests/suite/snapshots/suite__check__tests__check__bad_add_2.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_add_2.xi:2:17]
   │
 2 │     x:int = 1 + {1,2}
   ·                 ──┬──  
   ·                   ╰──── Expected int but found int[]
───╯

